--- a/C-Sharp-Web-Basics/Exam Preparation/SMS/SMS/SMS.csproj
+++ b/C-Sharp-Web-Basics/Exam Preparation/SMS/SMS/SMS.csproj
@@ -61,8 +61,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
+    <Content Include="Views\**\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
 
+    <Content Include="wwwroot\**\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
